CSS fixes for .alignfull: -set a max-width none -set the margin-top to layout singular left padding

--- a/src/Components/LayoutSingular/LayoutSingular.styl
+++ b/src/Components/LayoutSingular/LayoutSingular.styl
@@ -98,6 +98,8 @@
 		margin-top 2*$paragraph_margint
 
 	.alignfull
+		margin-top $layout_singular_padding
+		max-width none
 		width "calc(100vw - %s)" % $sidebar_width
 		margin-left -($layout_singular_padding)
 
